--- a/48_Mrvel_Bootstrap/index.html
+++ b/48_Mrvel_Bootstrap/index.html
@@ -133,10 +133,14 @@
             id="card_template"
             style="display: none"
           >
-            <div class="card">
-              <img class="card-img-top comic_img" src="#" alt="..." />
+            <div class="card h-100">
+              <img
+                class="card-img-top comic_img"
+                src="#"
+                alt="..."
+              />
               <div class="card-body text-center">
-                <h5 id="name" class="fw-bolder comic_name">
+                <h5 class="fw-bolder comic_name">
                   {COMIC NAME}
                 </h5>
                 <div
@@ -151,18 +155,18 @@
                 </div>
 
                 <span
-                  class="text-muted text-decoration-line-through"
+                  class="text-muted text-decoration-line-through comic_ori_price"
                 >
                   {ORIGINAL PRICE}
                 </span>
-                <span id="price">{PRICE}</span>
+                <span class="comic_price">{PRICE}</span>
               </div>
 
               <div
                 class="card-footer pb-4 border-top-0 bg-transparent"
               >
                 <div class="text-center">
-                  <button class="btn btn-outline-dark">
+                  <button class="btn btn-outline-dark  comic_button">
                     Add to cart
                   </button>
                 </div>
