--- a/48_Mrvel_Bootstrap/index.html
+++ b/48_Mrvel_Bootstrap/index.html
@@ -133,7 +133,7 @@
             id="card_template"
             style="display: none"
           >
-            <div class="card h-100">
+            <div class="card">
               <img
                 class="card-img-top comic_img"
                 src="#"
@@ -166,7 +166,9 @@
                 class="card-footer pb-4 border-top-0 bg-transparent"
               >
                 <div class="text-center">
-                  <button class="btn btn-outline-dark  comic_button">
+                  <button
+                    class="btn btn-outline-dark comic_button"
+                  >
                     Add to cart
                   </button>
                 </div>
