--- a/48_Mrvel_Bootstrap/product.html
+++ b/48_Mrvel_Bootstrap/product.html
@@ -64,7 +64,10 @@
                 aria-expanded="false"
                 >Shop</a
               >
-              <ul class="dropdown-menu" aria-labelledby="drop_products">
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="drop_products"
+              >
                 <li>
                   <a class="dropdown-item" href="#"> All Products </a>
                 </li>
@@ -98,19 +101,19 @@
           <div class="col-lg-5 mt-5">
             <div class="card mb-3">
               <img
+                id="comic_image"
                 class="card-img img-fluid"
                 src="assets/comic.jpeg"
-                alt="Card image cap"
-                id="product-detail"
+                alt="Card image cap"  
               />
             </div>
           </div>
           <!-- col end -->
           <div class="col-lg-7 mt-5">
-            <div class="card h-100">
+            <div id="comic_card"  class="card h-100">
               <div class="card-body">
-                <h1 class="h2">Marvel Previews (2017)</h1>
-                <p class="h3 py-2">$25.00</p>
+                <h1 id="title" class="h2">{{TITLE}}</h1>
+                <p id="price" class="h3 py-2">{{PRICE}}</p>
                 <div
                   class="d-flex justify-content-start small text-warning mb-2"
                 >
@@ -126,43 +129,27 @@
                   </li>
                   <li class="list-inline-item">
                     <p class="text-muted">
-                      <strong>Comic</strong>
+                      <strong id="format">{{FORMAT}}</strong>
                     </p>
                   </li>
                 </ul>
 
                 <h6>Description:</h6>
-                <p>
-                  The epic, untold love story between Marvel's two pre-eminent
-                  Black super heroes -- Storm and the Black Panther -- is
-                  finally told, as only New York Times best-selling author Eric
-                  Jerome Dickey can do it! An orphaned street urchin, living by
-                  her wits on the unforgiving plains of Africa as she struggles
-                  to harness her slowly-developing mutant powers...A warrior
-                  Prince, embarking on his rite of passage as he ponders the
-                  great responsibility in his future...And a crew of ruthless
-                  mercenaries who'll stop at nothing to capture an elusive
-                  creature of legend -- the fabled wind-rider. What sparks occur
-                  when their paths intersect? Don't miss out on this story, True
-                  Believer, as it builds to a July Event that will shake the
-                  entire Marvel Universe.
-                </p>
+                <p id="description">{{DESCRIPTION}}</p>
                 <ul class="list-inline">
                   <li class="list-inline-item">
                     <h6>Avaliable Stock :</h6>
                   </li>
                   <li class="list-inline-item">
                     <p class="text-muted">
-                      <strong>4</strong>
+                      <strong id="stock">{{STOCK}} </strong>
                     </p>
                   </li>
                 </ul>
 
                 <h6>Creators:</h6>
-                <ul class="list-unstyled pb-3">
-                  <li>Ronald Byrd</li>
-                  <li>Jeff Christiansen</li>
-                  <li>Anthony Flamini</li>
+                <ul id="creators" class="list-unstyled pb-3">
+                  <!-- <li> CREATOR 1</li>...-->
                 </ul>
 
                 <form action="" method="GET">
@@ -184,15 +171,21 @@
                           />
                         </li>
                         <li class="list-inline-item">
-                          <span class="btn btn-dark" id="btn-minus">-</span>
+                          <span class="btn btn-dark" id="btn-minus"
+                            >-</span
+                          >
                         </li>
                         <li class="list-inline-item">
-                          <span class="badge bg-secondary" id="var-value"
+                          <span
+                            class="badge bg-secondary"
+                            id="var-value"
                             >1</span
                           >
                         </li>
                         <li class="list-inline-item">
-                          <span class="btn btn-dark" id="btn-plus">+</span>
+                          <span class="btn btn-dark" id="btn-plus"
+                            >+</span
+                          >
                         </li>
                       </ul>
                     </div>
@@ -200,7 +193,8 @@
                   <div class="row pb-3">
                     <div class="col d-grid">
                       <button
-                        type="submit"
+                        id="btn_add"
+                        type="button"
                         class="btn btn-danger btn-lg"
                         name="submit"
                         value="addtocard"
@@ -227,6 +221,6 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/product.js"></script>
+    <script type="module" src="js/product.js"></script>
   </body>
 </html>
