--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 
         gtag('config', 'G-ZBH4N5ZENJ');
       </script>
+
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133866763-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-133866763-1');
+      </script>
+
   </head>
   <body>
     <!--NAVBAR-->
@@ -32,7 +43,7 @@
     >
       <div class="container px-4">
         <!--LOGO-->
-        <a href="#" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img src="assets/marvel.svg" width="100" alt="" />
         </a>
         <!--TOGGLER (Barritas Mobile)-->
