--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Marvel APP</title>
-            <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBH4N5ZENJ"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-ZBH4N5ZENJ');
-      </script>
-
 
 
   </head>
+  
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DTY8R5VH53"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DTY8R5VH53');
+  </script>
+
   <body>
     <!--NAVBAR-->
     <nav
